Fix figure.listing text alignment.

--- a/public/_static/page.css
+++ b/public/_static/page.css
@@ -9,6 +9,10 @@ figure {
 	text-align: center;
 }
 
+figure.listing {
+	text-align: left;
+}
+
 figure img {
 	max-width: 100%;
 }
